[package]
name = "jason_bot"
version = "1.3.0"
authors = ["Pt J <peter.j@kakao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serenity = { git = "https://github.com/serenity-rs/serenity.git", branch="v0.10.x", features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
serenity = { version = "0.9", features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
